--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -206,6 +206,12 @@ ul#nav li.current a { color: #fe6928; }
    height: 160px;
    border-radius: 100%;
 }
+#about .cert {
+   position: relative;
+   width: 160px;
+   height: 160px;
+   border-radius: 100%;
+}
 #about .badge1 {
    position: relative;
    width: 160px;
