--- a/css/layout.css
+++ b/css/layout.css
@@ -206,6 +206,18 @@ ul#nav li.current a { color: #fe6928; }
    height: 160px;
    border-radius: 100%;
 }
+#about .cert {
+   position: relative;
+   width: 160px;
+   height: 160px;
+   border-radius: 100%;
+}
+#about .badge1 {
+   position: relative;
+   width: 160px;
+   height: 160px;
+   border-radius: 100%;
+}
 #about .contact-details { width: 41.66667%; }
 #about .download {
    width: 58.33333%;
